--- a/example/package.json
+++ b/example/package.json
@@ -36,6 +36,8 @@
     "prop-types": "^15.7.2",
     "react": "18.2.0",
     "react-native": "0.71.7",
+    "react-native-animatable": "^1.3.3",
+    "react-native-reanimated": "^3.4.0",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.0.0",
     "react-native-svg": "^12.1.0",
